05-advanced-concepts/02-homework/task2/pod-task2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-task2
  labels:
    app: pod-task2
spec:
  containers:
  - image: shekeriev/k8s-environ
    name: main
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: pod-task2
